# agentcheckpoint

./: .gitignore  CONTRIBUTING.md  Dockerfile  PRIVACY.md  README.md  docker-compose.yml  enterprise-pitch.md  mock_agent.py  pyproject.toml
frontend/: Dockerfile  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  StateViewer.tsx  api.ts  index.css  types.ts
src/agentcheckpoint/: __init__.py  cli.py  core.py  resume.py  serializer.py  state.py
src/agentcheckpoint/dashboard/: __init__.py
src/agentcheckpoint/dashboard/api/: app.py
src/agentcheckpoint/enterprise/: LICENSE  __init__.py  audit.py  auto_resume.py  license.py  rbac.py  sso.py  telemetry.py
src/agentcheckpoint/integrations/: __init__.py  claude_agent.py  crewai.py  google_adk.py  langchain.py  langgraph.py  openai_agents.py
src/agentcheckpoint/storage/: __init__.py  async_writer.py  local.py  postgres.py  s3.py
tests/: test_core.py  test_resume.py  test_serializer.py  test_storage.py
